tests/paczka1/small_fuzzy/17029947.err
Error in line 4: uDEJP4E A580 40,0
Error in line 2: cpG A236 3,2
Error in line 1: A580 S650 54,5
Error in line 6: cpG S650 29,0
Error in line 3: affagc92cmS A241 83,1
Error in line 12: 9HfSR A236 0,6
